--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -57,6 +57,16 @@
               <artifactId>spring-boot-starter-test</artifactId>
               <scope>test</scope>
           </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.10.jre7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
