--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/beerData?currentSchema=beermachine
 spring.datasource.username=postgres
-spring.datasource.password=datamanagement 
+spring.datasource.password=password 
